@@ -1,4 +1,5 @@
 0.12
+ - Update Module::Install to 1.16 version.
 
 0.11 2015-04-06T23:22:54+02:00
  - Add get_line_by_id() and get_line_by_name() methods to doc.
